basic seqence structure

--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>My Rust + Webpack project!</title>
-  </head>
-  <body>
-    <script src="index.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Granular Synthesis Playground</title>
+	</head>
+	<body>
+		<main>
+			<audio
+				id="airport-source"
+				class="sample"
+				src="https://cdn.freesound.org/previews/31/31446_199517-lq.mp3"
+			></audio>
+			<button id="airport">airport</button>
+			<button id="white-noise">white noise</button>
+			<button id="wave">wave</button>
+		</main>
+		<script src="index.js"></script>
+	</body>
 </html>
