--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,8 @@
 				src="https://cdn.freesound.org/previews/31/31446_199517-lq.mp3"
 			></audio>
 			<button id="airport">airport</button>
-			<button id="white-noise">white noise</button>
-			<button id="wave">wave</button>
+			<!-- <button id="white-noise">white noise</button>
+			<button id="wave">wave</button> -->
 		</main>
 		<script src="index.js"></script>
 	</body>
