--- a/static/index.html
+++ b/static/index.html
@@ -5,16 +5,7 @@
 		<title>Granular Synthesis Playground</title>
 	</head>
 	<body>
-		<main>
-			<audio
-				id="airport-source"
-				class="sample"
-				src="https://cdn.freesound.org/previews/31/31446_199517-lq.mp3"
-			></audio>
-			<button id="airport">airport</button>
-			<!-- <button id="white-noise">white noise</button>
-			<button id="wave">wave</button> -->
-		</main>
+		<div id="root"></div>
 		<script src="index.js"></script>
 	</body>
 </html>
